@@ -18,7 +18,6 @@
 ##  You should have received a copy of the GNU General Public License
 ##  along with RPushbullet.  If not, see <http://www.gnu.org/licenses/>.
 
-
 ##' Retrieve the list of devices registered for the given API key.
 ##'
 ##' This function invokes the \sQuote{devices} functionality of
@@ -29,13 +28,40 @@
 ##' supplied as an argument here, or via the file
 ##' \code{~/.rpushbullet.json} which is read at package
 ##' initialization.
-##' @return A JSON result record is return invisibly
+##' @return The resulting JSON record is converted to a list and
+##' returned as a \code{pbDevices} object with appropriate
+##' \code{print} and \code{summary} methods.
 ##' @author Dirk Eddelbuettel
 pbGetDevices <- function(apikey=.getKey()) {
+    UseMethod("pbGetDevices")
+}
+
+##' @rdname pbGetDevices
+pbGetDevices.default <- function(apikey=.getKey()) {
     txt <- sprintf("%s -s %s -u %s:",
                    .getCurl(), "https://api.pushbullet.com/v2/devices", apikey)
-    res <- system(txt, intern=TRUE)
+    jsonres <- system(txt, intern=TRUE)
+    res <- fromJSON(jsonres)
+    class(res) <- c("pbDevices", "list")
     invisible(res)
+}
+
+##' @rdname pbGetDevices
+##' @param x Default object for \code{print} method
+##' @param ... Other optional arguments
+print.pbDevices <- function(x, ...) {
+    cat("Pushbullet device list\n")
+    ## we ignore argument 1 which seems empty in all cases
+    print(str(x[["devices"]]))
+    invisible(x)
+}
+
+##' @rdname pbGetDevices
+##' @param object Default object for \code{summary} method
+summary.pbDevices <- function(object, ...) {
+    cat("Pushbullet device summary for", length(object[["devices"]]), "devices ")
+    cat("with these ids:\n", paste(sapply(res[["devices"]], "[", "iden"), collape=""), "\n")
+    invisible(object)
 }
 
 # TODO: pbDelete(Devices)
